--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -31,7 +31,7 @@
                                         >
                                 </div>
                             </div>
-                            <div class="col-sm-4">
+                            <!-- <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Department Head </label>
                                     <select class="form-control">
@@ -41,7 +41,7 @@
                                         <option>Department Head 4</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Part Name</label>
@@ -52,18 +52,24 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Date</label>
+                                    <label class="form_label">Actual Start Date</label>
                                     <input type="date" class="form-control inputbox_css">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
+                                    <label class="form_label">Actual End Date</label>
+                                    <input type="date" class="form-control inputbox_css">
+                                </div>
+                            </div>
+                            <!-- <div class="col-sm-4">
+                                <div class="form-group">
                                     <label class="mb-0">Auditor</label>
                                     <p class="form_label">Auditor1, Auditor2, Auditor3</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-sm-12">
                                 <table class="table table-bordered">
                                     <thead>
@@ -90,10 +96,10 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="card-footer text-right">
-                        <button (click)="next()" class="btn btn-primary">Next</button>
+                        <button (click)="next()" class="btn btn-primary mr-1">Next</button>
                         <button (click)="back()" class="btn btn-default">Back</button>
                     </div>
                 </div>
