--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -57,8 +57,11 @@
                         <div class="card-header">
                             <div class="header_card">
                                 <h3 class="card-title">Audit Area Details</h3>
-                                <div class="d-flex">
-                                    <input type="text" class="form-control mr-1" placeholder="search ...">
+                                <div class="d-flex align-items-center">
+                                    <h6 class="mr-1 mb-0">Filters:-</h6>
+                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
+                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
+                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Status ">
                                     <!-- <button class="btn btn-success d-flex  align-items-center">
                                         <i class="fas fa-upload mr-1 upload_ico"></i>
                                         <span class="now_rap">Upload Plan</span>
