--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -81,27 +81,27 @@
                                             <thead>
                                               <tr>
                                                 <th scope="col">Remarks</th>
-                                                <th scope="col">Upload File</th>
-                                                <th>Action</th>
+                                               
+                                                <th class="w_15">Action</th>
           
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
                                                 <th scope="row">    <textarea class="form-control"></textarea></th>
+                                                
                                                 <td>
-                                                  <div class="input-group">
-                                                    <div class="custom-file">
-                                                      <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                                    </div>
-          
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <button class="btn btn-primary">+</button>
+                                                  <div class="d-flex">
+                                                  <div class="image-upload mr-1">
+                                                    <label for="file-input">
+                                                        <img src="../../../../assets/icons/up-arrow.png"data-toggle="tooltip" data-placement="top" title="Uplaod File" class="upload_file_css">
+                                                    </label>
+                                                
+                                                    <input id="file-input" type="file"/>
+                                                </div>
+                                                  <button class="btn btn-primary mr-1">+</button>
                                                   <button class="btn btn-danger">-</button>
-          
+          </div>
                                                 </td>
           
                                               </tr>
@@ -112,7 +112,7 @@
                                       </div><!--row end-->
                                     </div>
                                     <div class="card-footer">
-                                      <button (click)="saveAsDraft()" class="btn btn-primary">Save as draft</button>
+                                      <!-- <button (click)="saveAsDraft()" class="btn btn-primary">Save as draft</button> -->
                                       <button (click)="auditCreate()" class="btn btn-success">Submit</button>
                                     </div>
                                   </div>
@@ -146,27 +146,27 @@
                                             <thead>
                                               <tr>
                                                 <th scope="col">Remarks</th>
-                                                <th scope="col">Upload File</th>
-                                                <th>Action</th>
+                                               
+                                                <th class="w_15">Action</th>
           
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
                                                 <th scope="row">    <textarea class="form-control"></textarea></th>
+                                                
                                                 <td>
-                                                  <div class="input-group">
-                                                    <div class="custom-file">
-                                                      <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                                    </div>
-          
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <button class="btn btn-primary">+</button>
+                                                  <div class="d-flex">
+                                                  <div class="image-upload mr-1">
+                                                    <label for="file-input">
+                                                        <img src="../../../../assets/icons/up-arrow.png"data-toggle="tooltip" data-placement="top" title="Uplaod File" class="upload_file_css">
+                                                    </label>
+                                                
+                                                    <input id="file-input" type="file"/>
+                                                </div>
+                                                  <button class="btn btn-primary mr-1">+</button>
                                                   <button class="btn btn-danger">-</button>
-          
+          </div>
                                                 </td>
           
                                               </tr>
@@ -177,7 +177,7 @@
                                       </div><!--row end-->
                                     </div>
                                     <div class="card-footer">
-                                      <button (click)="addData()" class="btn btn-primary">Save as draft</button>
+                                      <!-- <button (click)="addData()" class="btn btn-primary">Save as draft</button> -->
                                       <button (click)="init()" class="btn btn-success">Submit</button>
                                     </div>
                                   </div>
@@ -214,27 +214,27 @@
                                             <thead>
                                               <tr>
                                                 <th scope="col">Remarks</th>
-                                                <th scope="col">Upload File</th>
-                                                <th>Action</th>
+                                               
+                                                <th class="w_15">Action</th>
           
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
                                                 <th scope="row">    <textarea class="form-control"></textarea></th>
+                                                
                                                 <td>
-                                                  <div class="input-group">
-                                                    <div class="custom-file">
-                                                      <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                                    </div>
-          
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <button class="btn btn-primary">+</button>
+                                                  <div class="d-flex">
+                                                  <div class="image-upload mr-1">
+                                                    <label for="file-input">
+                                                        <img src="../../../../assets/icons/up-arrow.png"data-toggle="tooltip" data-placement="top" title="Uplaod File" class="upload_file_css">
+                                                    </label>
+                                                
+                                                    <input id="file-input" type="file"/>
+                                                </div>
+                                                  <button class="btn btn-primary mr-1">+</button>
                                                   <button class="btn btn-danger">-</button>
-          
+          </div>
                                                 </td>
           
                                               </tr>
@@ -245,7 +245,7 @@
                                       </div><!--row end-->
                                     </div>
                                     <div class="card-footer">
-                                      <button (click)="addData()" class="btn btn-primary">Save as draft</button>
+                                      <!-- <button (click)="addData()" class="btn btn-primary">Save as draft</button> -->
                                       <button (click)="init()" class="btn btn-success">Submit</button>
                                     </div>
                                   </div>
@@ -286,27 +286,27 @@
                                             <thead>
                                               <tr>
                                                 <th scope="col">Remarks</th>
-                                                <th scope="col">Upload File</th>
-                                                <th>Action</th>
+                                               
+                                                <th class="w_15">Action</th>
           
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
                                                 <th scope="row">    <textarea class="form-control"></textarea></th>
+                                                
                                                 <td>
-                                                  <div class="input-group">
-                                                    <div class="custom-file">
-                                                      <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                                    </div>
-          
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <button class="btn btn-primary">+</button>
+                                                  <div class="d-flex">
+                                                  <div class="image-upload mr-1">
+                                                    <label for="file-input">
+                                                        <img src="../../../../assets/icons/up-arrow.png"data-toggle="tooltip" data-placement="top" title="Uplaod File" class="upload_file_css">
+                                                    </label>
+                                                
+                                                    <input id="file-input" type="file"/>
+                                                </div>
+                                                  <button class="btn btn-primary mr-1">+</button>
                                                   <button class="btn btn-danger">-</button>
-          
+          </div>
                                                 </td>
           
                                               </tr>
@@ -317,7 +317,7 @@
                                       </div><!--row end-->
                                     </div>
                                     <div class="card-footer">
-                                      <button (click)="addData()" class="btn btn-primary">Save as draft</button>
+                                      <!-- <button (click)="addData()" class="btn btn-primary">Save as draft</button> -->
                                       <button (click)="init()" class="btn btn-success">Submit</button>
                                     </div>
                                   </div>
@@ -355,27 +355,27 @@
                                             <thead>
                                               <tr>
                                                 <th scope="col">Remarks</th>
-                                                <th scope="col">Upload File</th>
-                                                <th>Action</th>
+                                               
+                                                <th class="w_15">Action</th>
           
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
                                                 <th scope="row">    <textarea class="form-control"></textarea></th>
+                                                
                                                 <td>
-                                                  <div class="input-group">
-                                                    <div class="custom-file">
-                                                      <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                                    </div>
-          
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <button class="btn btn-primary">+</button>
+                                                  <div class="d-flex">
+                                                  <div class="image-upload mr-1">
+                                                    <label for="file-input">
+                                                        <img src="../../../../assets/icons/up-arrow.png"data-toggle="tooltip" data-placement="top" title="Uplaod File" class="upload_file_css">
+                                                    </label>
+                                                
+                                                    <input id="file-input" type="file"/>
+                                                </div>
+                                                  <button class="btn btn-primary mr-1">+</button>
                                                   <button class="btn btn-danger">-</button>
-          
+          </div>
                                                 </td>
           
                                               </tr>
@@ -386,7 +386,7 @@
                                       </div><!--row end-->
                                     </div>
                                     <div class="card-footer">
-                                      <button (click)="addData()" class="btn btn-primary">Save as draft</button>
+                                      <!-- <button (click)="addData()" class="btn btn-primary">Save as draft</button> -->
                                       <button (click)="init()" class="btn btn-success">Submit</button>
                                     </div>
                                   </div>
