--- a/src/app/dashboard/masters/audit-area/audit-area-list/audit-area-list.component.html
+++ b/src/app/dashboard/masters/audit-area/audit-area-list/audit-area-list.component.html
@@ -6,7 +6,7 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details</h3>
-                <a *ngIf="isSuperAdmin" (click)="addAuditArea()" class="btn btn-blue"> <img src="../../../../../assets/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>
+                <a *ngIf="isSuperAdmin" (click)="addAuditArea()" class="btn btn-primary"> <img src="../../../../../assets/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>
               </div>
             </div>
             <div class="card-body">
