--- a/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
+++ b/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
@@ -17,14 +17,14 @@
                                  maxlength="200">
                         </div>
                       </div>
-                      <div class="col-sm-4">
+                      <!-- <div class="col-sm-4">
                         <div class="form-group">
                           <label class="form_label">Category Code</label>
                           <input type="text" class="form-control inputbox_css" 
                                  placeholder="Enter Categories Name" formControlName="code"
                                  maxlength="200">
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                   <div class="card-footer">
