--- a/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
+++ b/src/app/dashboard/masters/employee/employee-edit/employee-edit.component.html
@@ -30,8 +30,10 @@
                           <label class="form_label">Employee Role</label>
                           <select class="form-control" formControlName="employee_role">
                             <option>Select</option>
-                            <option>Admin</option>
+                            
                             <option>Auditor</option>
+                            <option>Planner</option>
+                            <option>View Only</option>
                           </select>
                         </div>
                       </div>
