--- a/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
+++ b/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
@@ -6,7 +6,7 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Employee Master</h3>
-                <a *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-blue"> 
+                <a *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-primary"> 
                     <img src="../../../../../assets/icons/group.png" class="side_imgmaster mr-1">Add Employee</a>
               </div>
             </div>
