--- a/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
@@ -16,13 +16,13 @@
                           formControlName="regulation_name"></textarea>
                         </div>
                       </div>
-                      <div class="col-sm-4">
+                      <!-- <div class="col-sm-4">
                         <div class="form-group">
                           <label class="form_label">Regulation Code</label>
                           <input type="text" class="form-control inputbox_css" formControlName="regulation_code"
                                  placeholder="Enter Regulation Code" maxlength="200">
                         </div>
-                      </div>
+                      </div> -->
                       <div class="col-sm-4">
                         <div class="form-group">
                           <label class="form_label">Categories</label>
