--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -10,182 +10,80 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>12%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="table-responsive">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr class="text-center">
+                                        <th>
+                                            S.No
+                                            </th>
+                                            <th>Text
+                                            </th>
+                                            <th>Complition Status
+                                            </th>
+                                            <th>
+                                                Score
+                                            </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody  (click)="details()" >
+                                            <tr class="text-center">
+                                            <td>
+                                                1. 
+                                            </td>
+                                            <td>
+                                                Production preparation
+                                            </td>
+                                            <td>
+                                                <p class="complition_status">4/5</p>
+                                            </td>
+                                            <td>
+                                                <div class="progress">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                                      70%
+                                                    </div>
+                                                  </div>
+                                            </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td>
+                                                    2. 
+                                                </td>
+                                                <td>
+                                                    Regulation for initial production control 
+                                                </td>
+                                                <td>
+                                                    <p class="complition_status">3/5</p>
+                                                </td>
+                                                <td>
+                                                    <div class="progress">
+                                                        <div class="progress-bar1" role="progressbar" aria-valuenow="70"
+                                                        aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                                          45%
+                                                        </div>
+                                                      </div>
+                                                </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                         </div>
-                                    </div>
-                                    <button (click)="details()" class="btn  btn-blue fon_12"> Production
-                                        preparation</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>20%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Regulation for
-                                        initial production control
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>30%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12"> Changing management</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>20%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Standards management
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>60%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Education and training
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>60%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Quality audit and process verification
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>12%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12"> Production preparation</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>20%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Regulation for
-                                        initial production control
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>30%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12"> Changing management</button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>20%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Standards management
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>60%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Education and training
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-sm-2">
-                                <div class="box box_css">
-                                    <div class="c100 p12 small">
-                                        <span>60%</span>
-                                        <div class="slice">
-                                            <div class="bar"></div>
-                                            <div class="fill"></div>
-                                        </div>
-                                    </div>
-                                    <button class="btn  btn-blue fon_12">
-                                        Quality audit and process verification
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+
+                                </div><!--colend-->
+                            </div><!--row-->
+                        
+                       
                     </div>
                     <div class="card-footer">
                         <div class="flex_direction_media">
-                            <button class="btn btn-primary" (click)="viewSummary()">View Summary
+                            <button class="btn btn-primary mr-1" (click)="viewSummary()">View Summary
                                 Details</button>
-                            <button class="btn btn-primary">Save as draft</button>
-                            <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModal1"> Critical
-                                Observation</button>
-                            <button class="btn btn-success" data-toggle="modal"
+                            <button class="btn btn-primary mr-1">Save as draft</button>
+                            <button class="btn btn-danger mr-1"  data-toggle="modal" data-target="#executive-summary"> 
+                               Executive Summary </button>
+                            <button class="btn btn-success mr-1" data-toggle="modal"
                                 data-target="#exampleModal">Submit</button>
                             <button (click)="back()" class="btn btn-default">Back</button>
                         </div>
@@ -195,3 +93,87 @@
         </div>
     </div>
 </section>
+
+<div class="modal fade" id="executive-summary" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Executive Summary</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div id="accordion">
+                <div class="d-flex execuit_popp">
+                    <button class="btn btn-primary" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Vendor Attendees
+                      </button>
+                      <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                       Critical Observation
+                      </button>
+                    </div>
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                          <div class="row">
+                            <div class="col-sm-12">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr class="sticky_header">
+                                            <th scope="col">S.No</th>
+                                            <th scope="col">Vendor Attendees</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>
+                                                <input type="text" class="form-control inputbox_css"
+                                                    placeholder="Enter Vendor Attendees" maxlength="200">
+                                            </td>
+                                            <td>
+                                                <div class="d-flex add_minus_mar">
+                                                    <button class="btn btn-primary">+</button>
+                                                    <button class="btn btn-danger">-</button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div> 
+                        </div>
+                      </div>
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                         <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr class="sticky_header">
+                                        <th>S.No</th>
+                                        <th>Remarks</th>
+                                        <th>Action</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                            <td>1.</td>
+                                            <td><textarea class="form-control" rows="3" placeholder="Enter Your Remark" spellcheck="false"></textarea></td>
+                                            <td><button class="btn btn-primary mr-1">+</button></td>
+                                            </tr>
+                                            
+                                            </tbody>
+                                        </table>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
