--- a/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
@@ -15,7 +15,7 @@
                   <thead>
                     <tr class="sticky_header">
                       <th>Regulation Name </th>
-                      <th>Regulation Code</th>
+                      <!-- <th>Regulation Code</th> -->
                       <th>Categories</th>
                       <th>Audit Area</th>
                       <th>Regulation Creation Date</th>
@@ -25,7 +25,7 @@
                   <tbody>
                     <tr>
                       <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
-                      <td>12345</td>
+                      <!-- <td>12345</td> -->
                       <td>Production preparation</td>
                       <td>Regarding implementation rule of production preparation</td>
                       <td>12-2-2022</td>
@@ -38,7 +38,7 @@
                     </tr>
                     <tr>
                       <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
-                      <td>12345</td>
+                      <!-- <td>12345</td> -->
                       <td>Production preparation</td>
                       <td>Regarding implementation rule of production preparation</td>
                       <td>12-2-2022</td>
