--- a/src/app/dashboard/reports/action-plan-vendor/action-plan-vendor.component.html
+++ b/src/app/dashboard/reports/action-plan-vendor/action-plan-vendor.component.html
@@ -18,8 +18,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-9">
-                            <canvas baseChart [data]="actionPlanData" [type]="'bar'" [options]="actionPlanOptions">
+                        <div class="col-md-12">
+                            <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
                             </canvas>
                         </div>
                     </div>
