--- a/src/app/dashboard/reports/pending-status/pending-status.component.html
+++ b/src/app/dashboard/reports/pending-status/pending-status.component.html
@@ -11,8 +11,8 @@
                                     (change)='onFilterSelected()'>
                                     <option value="year">Year</option>
                                     <option value="month">Month</option>
-                                    <option value="auditor">Auditor</option>
                                     <option value="date">Date</option>
+                                    <option value="name">Vendor Name</option>
                                     <option value="code">Vendor Code</option>
                                 </select>
                             </div>
