--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -176,10 +176,34 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="/report/pending-status" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Report Pending Status
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="/report/average-defect" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Average Defect Vs VSA Score
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/average-defect-supplier" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Average Defect/ Supplier/ Month
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/report/vendor-summary" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Vendor Summary
                   </p>
                 </a>
               </li>
