--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer" *ngIf="isSuperAdmin">
                             <button class="btn btn-primary" (click)="submit()">Submit</button>
                             <button class="btn btn-default" (click)="close()">Close</button>
                         </div>
