--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -112,6 +112,16 @@
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a routerLink="/dashboard/vendor" class="nav-link">
+                  <img src="../../assets/icons/lightbulb.png" class="side_img">
+                  <p>
+                    Action Plan
+                  </p>
+                </a>
+              </li>
+              </ul>
           </li>
           <li class="nav-item" *ngIf="!isAuditor">
             <a class="nav-link">
