--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <a href="#/" class="nav-link active">
+            <a routerLink="/dashboard" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -52,7 +52,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a routerLink="/dashboard/audit" class="nav-link">
+                <a routerLink="/dashboard/audit-area" class="nav-link">
                   <img src="../../assets/icons/traffic-data.png" class="side_img">
                   <p>
                     Audit Area
