action plan created

--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -114,7 +114,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a routerLink="/dashboard/vendor" class="nav-link">
+                <a routerLink="/dashboard/action-plan" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Action Plan
