--- a/src/styles.css
+++ b/src/styles.css
@@ -215,6 +215,14 @@
   color: #fff !important;
 }
 
+.btn-warning {
+  padding: 2px 14px !important;
+  font-size: 15px !important;
+  background-color: yellow !important;
+  border-color: yellow !important;
+  color: #000 !important;
+}
+
 
 
 .card-footer {
